# github-actions-tracing

./: .gitignore  LICENSE  README.md  github_actions.perfetto-trace  main.py  pyproject.toml
.github/workflows/: build-and-publish.yml  test.yml
scripts/: generate-perfetto-trace-proto.sh
src/github_actions_tracing/: main.py
tests/: test_sanity.py
