[project]
name = "github-actions-tracing"
description = "A tracing tool for GitHub Actions"
dependencies = [
    "watcloud-utils @ git+https://github.com/WATonomous/watcloud-utils.git",
    "protobuf>=5.28.2",
    "requests>=2.32.3",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "BSD-2-Clause"}

dynamic = ["version"]

[project.scripts]
gatrace = "github_actions_tracing.main:app"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.version]
source = "scm"
write_to = "github_actions_tracing/_version.py"
write_template = "__version__ = '{}'"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.3",
]

[tool.pdm.scripts]
gatrace = { call = "github_actions_tracing.main:app" }
pre_run = "./scripts/generate-perfetto-trace-proto.sh"
pre_build = "./scripts/generate-perfetto-trace-proto.sh"

[tool.pdm.build]
# Docs: https://backend.pdm-project.org/build_config/#include-or-exclude-files
includes = ["src", "vendor"]
excludes = ["**/.gitkeep"]